@@ -1,3 +1,10 @@
+2004-08-12  Geoff Norton <gnorton@customerdna.com>
+
+	* INSTALL:
+	* man/mod_mono.8.in:
+	* src/mod_mono.c:  Use RLIMIT_DATA as opposed to RLIMIT_AS; because RLIMIT_AS
+	isn't defined on all platforms.  Update documentation to reflect this change.
+
 2004-07-29 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* configure.in: 1.0.1
